--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body class="bg-yellow-100">
 		<main id="root" class="min-h-screen bg-yellow-100"></main>
-		<script src="main.js" type="module"></script>
+		<script src="/main.js" type="module"></script>
 		<!-- <script src="/other.js" type="module"></script> -->
 	</body>
 </html>
