--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite App</title>
 	</head>
-	<body class="bg-yellow-100">
+	<body class="">
 		<main id="root" class="min-h-screen bg-yellow-100"></main>
 		<script src="/main.js" type="module"></script>
 		<!-- <script src="/other.js" type="module"></script> -->
