--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-
-		<link rel="icon" type="image/svg+xml" href="favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="gear.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>RGC Inngenieria</title>
 	</head>
 	<body class="">
 		<main id="root" class="min-h-screen bg-yellow-100"></main>
